--- a/src/styles/profilepage.css
+++ b/src/styles/profilepage.css
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: #eeeeeeee;
   text-align: center;
-  margin-bottom: 75px;
+  height: 100vh;
 }
 
 .profile {
